# bb_schedule

./: .cursorignore  .dockerignore  .env  .env_template  .gitignore  Dockerfile  README.md  bot.py  check_all_teachers.py  check_db.py  check_db_sync.py  check_logs.py  check_rating_bug.py  check_teacher.py  config.py  database.py  docker-compose.yml  fetch_schedule.py  keyboards.py  nginx_snippet.conf  process_schedules.py  pyproject.toml  pytest.ini  query_db.py  query_db2.py  readme.md  requirements.txt  run.sh  seed_subject_stats.py  start.sh  sync_manual.py  test_format.py  test_sync.py  update_mapping.py  usurt_scraper.py  utils.py  web_app.py
.info/: audio.md
app/: main.py
app/bot/: filters.py  fio_mapping.py  formatter.py  keyboards.py  main.py  states.py
app/bot/handlers/: admin.py  common.py  rating.py  schedule.py  session.py  (+2 more)
app/core/: config.py  database.py  state.py
app/services/: backup.py  cluster_mapper.py  clustering.py  db_transfer.py  rating_scraper.py  rating_updater.py  schedule_api.py  schedule_sync.py  session_tracker.py  subject_stats.py  teacher_stats.py
app/web/: app.py
templates/: base.html  index.html  schedule.html
tests/: README.md  __init__.py  conftest.py  test_auto_updates.py  test_bot_handlers.py  test_database.py  test_db_transfer_manual.py  test_deploy.py  test_imports.py  test_job_logs.py  test_process_schedules.py  test_real_scenarios.py  test_scenario_flow.py  test_scraper_algo.py  test_session_parsing.py  test_session_tracker.py  test_teacher_lookup.py  test_usurt_scraper.py  test_web_app.py
tools/: recluster_all.py
(+5 files in other folders)
