[project]
name = "bb-schedule"
version = "0.1.0"
description = "USURT schedule bot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5",
    "playwright",
    "pandas",
    "xlrd",
    "aiogram",
    "gitingest",
    "python-decouple>=3.8",
    "aiosqlite" # <-- ДОБАВЛЕНО
]