[project]
name = "bb-schedule"
version = "0.1.0"
description = "USURT schedule bot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5",
    "playwright",
    "pandas",
    "xlrd",
    "aiogram",
    "gitingest",
    "python-decouple>=3.8",
    "apscheduler",
    "aiosqlite",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "faker>=18.0.0"
]